fixes submit button not showing

--- a/app/assets/stylesheets/site_wide.css
+++ b/app/assets/stylesheets/site_wide.css
@@ -107,6 +107,7 @@ footer {
 	color: black;
 	height: 460px;
 	overflow-y:auto;
-
-	
+}
+.padding{
+	margin-bottom: 70px;
 }
